argocd-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-web-service
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ "^/(.*)" {
        proxy_pass https://10.100.15.102:80;
      }
spec:
  rules:
  - host: argocd.gpastor.net
  tls:
  - hosts:
    - argocd.gpastor.net
    secretName: gpastor-wildcard
